Update plugin for sonatype. Update readme with release instructions.